# mathscinet-bibkey

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/input/: converted_evans_lekili.bib  converted_test.bib  evans_lekili.bib  expected_evans_lekili.bib  expected_hartshorne.bib  hartshorne.bib  test.bib
src/mathscinet_bibkey/: __init__.py  __main__.py  lib.py
src/readable_bibkey/: __init__.py  __main__.py  lib.py
src/test/: test_convert_library.py
