[project]
name = "mathscinet-bibkey"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hayato Arai", email = "hayato4d@gmail.com" }
]
dependencies = [
    "bibtexparser @ git+https://github.com/sciunto-org/python-bibtexparser/",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"mathscinet-bibkey" = "mathscinet_bibkey:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mathscinet_bibkey"]
