[project]
name = "readable-bibkey"
version = "0.1.0"
description = "This script converts citation keys in a specified BibTeX file to a readable author_YYYY_title format."
authors = [
    { name = "Hayato Arai", email = "hayato4d@gmail.com" }
]
dependencies = [
    "bibtexparser @ git+https://github.com/sciunto-org/python-bibtexparser/",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"readable-bibkey" = "readable_bibkey:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/readable_bibkey"]
